Replace flex with grid

--- a/index.html
+++ b/index.html
@@ -54,24 +54,25 @@
     </div>
 </header>
     <section class="opening-tag">
-        <div><h1>This site is for members only</h1></div>
-        <p>The content provided is intended for full members of DHFA. If you are interested in classes, please go to denverhistoricalfencing.com for more info.</p>
-        <button><a href="https://denverhistoricalfencing.com/">get info</a></button>
+        <div class="opening-div">
+            <div><h1>This site is for members only</h1></div>
+            <p>The content provided is intended for full members of DHFA. If you are interested in classes, please go to denverhistoricalfencing.com for more info.</p>
+            <button class="info-button"><a href="https://denverhistoricalfencing.com/">get info</a></button>
+        </div>
     </section>
     <!-- REGISTRATION SECTION -->
     <section class="registration">
         <div class="classes">
-            <h1 class="class-tag">Classes</h1>
                 <div class="class-div">
+                    <h1 class="class-tag">Classes</h1>
                     <p class="class-text">A tablet will be available at the gym for check in, but you can also log into your Rhinofit account to do so.</p>
                     <button class="check-button"><a href="https://my.rhinofit.ca/students/">check in</a></button>
                 </div>
             </div>
             <div class="regs">
-            <h1 class="reg-tag">Online Registration</h1>
                 <div class="reg-div">
+                    <h1 class="reg-tag">Online Registration</h1>
                         <p class="reg-text">Classes must be registered for in advance during COVID.
-                           
                             <br>Lessons will be available soon.</p>
                         <button class="reg-button"><a href=" https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">register</a></button>
                     </div>
@@ -87,8 +88,8 @@
             <span><h1>Video Library</h1></span>
             <p>Going forward, all sparring footage is now uploaded to Dropbox.  To find your footage, either search by your name or navigate the folder structure.</p>
             <button class="video-button"><a href="https://www.dropbox.com/sh/hnl4zvpyazqkhmp/AADxWIJl_8rDDDLcePNngIvKa?dl=0">view library</a></button>
-            <img class="hilt-1" src="images/Hilts-1.png">
         </div>
+        <img class="hilt-1" src="images/Hilts-1.png">
     </section>
     <!-- CLUB DOCUMENTS SECTION -->
     <section class="club-documents">
