Members shield and nav bar fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="https://my.rhinofit.ca/store/products/dbae5ebb">Shop</a></li>
             <li><a href="#">Club Leadership</a></li>
             <li><a href="#">Club Updates</a></li>
-            <li><a href=" https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">Class/ Lesson Signup</a></li>
+            <li><a href=" https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">Class Signup</a></li>
             <li><a href="#">Reading Materials</a></li>
             <li><a href="#">Equipment Guide</a></li>
             <li><a href="https://docs.google.com/document/d/1leaNUhkbYNF7OV9quRUYVx3VeisiRISOa0xHvIGaq3I/edit">Code of Conduct</a></li>
@@ -49,7 +49,8 @@
 <!-- OPENING TAG SECTION  -->
     <img class="head-img" src="/images/jason-badass.jpg">
         <div>
-            <img class="shield" src="/images/member-shield.png">
+            <img class="shield" src="/images/dhfa-members-shield.png">
+            
         </div>
     </div>
 </header>
