--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="menu">
             <li><a href="#home">Home</a></li>
             <li><a href="https://my.rhinofit.ca/store/products/dbae5ebb">Shop</a></li>
-            <li><a href="#">Club Leadership</a></li>
+            <li><a href="leadership.html">Club Leadership</a></li>
             <li><a href="#">Club Updates</a></li>
             <li><a href=" https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">Class Signup</a></li>
             <li><a href="#">Reading Materials</a></li>
