Leaderships desktop sizing

--- a/leadership.html
+++ b/leadership.html
@@ -65,72 +65,67 @@
                 <li class="instructor-li">
                     
                     <img src="images/headshots/jason-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
+                    <button class= "book-button"><a href="https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/meghan-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
+                    <button class= "book-button"><a href="https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/gryphon-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
+                    <button class= "book-button"><a href="https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/connor-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
+                    <button class= "book-button"><a href="https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/monica-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/phil-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/matt-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/liam-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
+                    <button class= "book-button"><a href="https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/melissa-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
+                    <button class= "book-button"><a href="https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/jd-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/isaac-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
+                    <button class= "book-button"><a href="https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/mario-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
+                    <button class= "book-button"><a href="https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/brad-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
+                    <button class= "book-button"><a href="https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 <li class="instructor-li">
                     <img src="images/headshots/jill-headshot.png">
-                    <button class= "book-button"><a>book lesson</a></button>
                     <div class="img-overlay"></div>
                 </li>
                 
