Equipment page start

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><a href="#">Club Updates</a></li>
             <li><a href=" https://my.rhinofit.ca/cal/dbae5ebb?show=classes&agenda=agendaWeek&minTime=0&maxTime=24&classes=all">Class Signup</a></li>
             <li><a href="#">Reading Materials</a></li>
-            <li><a href="#">Equipment Guide</a></li>
+            <li><a href="equipment.html">Equipment Guide</a></li>
             <li><a href="https://docs.google.com/document/d/1leaNUhkbYNF7OV9quRUYVx3VeisiRISOa0xHvIGaq3I/edit">Code of Conduct</a></li>
           </ul>
           
@@ -45,7 +45,7 @@
         <img class="logo" src="/images/DHFA-logo.png">
         <span class="members-tag">Members Site</span>
         <div class="header-top"></div> 
-</header>
+
 <!-- OPENING TAG SECTION  -->
     <img class="head-img" src="/images/jason-badass.jpg">
         <div>
